// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correct 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0 auto;
  padding: 1rem;
  width: 100%;
  max-height: 100%;
  max-width: 50rem;
}

<div
  className="c0"
/>
`;

exports[`Container sets proper size 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0 auto;
  padding: 1rem;
  width: 100%;
  max-height: 100%;
  max-width: 75rem;
}

<div
  className="c0"
/>
`;
